SEBSP-116 finished implementation, still need to test